Complétion traitement des résultats.

--- a/analyse.tex
+++ b/analyse.tex
@@ -390,7 +390,7 @@ DSAA & Traduction & Traduit les données qui lui sont communiquées depuis le fr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %      GESTION DES QUESTIONNAIRES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Gestion des questionnaires}\label{sec:constituer-quest}
+\subsection{Constituer les questionnaires}\label{sec:constituer-quest}
 Lors de chaque campagne, un questionnaire est associé à chaque unité d'enseignement.
 Ce questionnaire peut changer d'une campagne à l'autre, mais il doit être possible de retrouver celui correspondant à une campagne donnée.
 
@@ -715,17 +715,17 @@ Il est disponible durant une période définie dans le calendrier de campagne.
 Il n'est possible d'évaluer que les UE et les enseignants dont les questionnaires ont atteint le quorum.
 Si le quorum n'est pas atteint, l'évaluation est établie comme étant «~sans objet~».
 Ce processus est pris en charge par la commission pédagogique facultaire.
-Chaque commission évalue les unités d'enseignement dont le mnémonique relève de la faculté en question.
+Chaque commission évalue les unités d'enseignement dont le mnémonique relève de leur faculté.
 
 Ce processus constitué de deux étapes~:
 \begin{itemize}
-	\item un dépouillement préliminaire réalisé par un ou plusieurs membres de la commission pédagogique qui consiste à émettre une évaluation pour les unités d'enseignement et les enseignant ne nécessitant pas une assemblée plénière~;
-	\item La réunion de commission pédagogique faculaire qui délibère des autres cas.
+	\item un dépouillement préliminaire réalisé par un ou plusieurs membres de la commission pédagogique qui consiste à émettre une évaluation pour les unités d'enseignement et les enseignant ne nécessitant pas une assemblée plénière (section~\ref{sec:depouillement-res})~;
+	\item la réunion de commission pédagogique faculaire qui délibère des autres cas (section~\ref{sec:deliberation-eval}).
 \end{itemize}
 
 % Dans les deux cas, la commission est amenée à émettre un avis périodique.
 
-Pour chaque unité d'enseignement, la commission pédagogique émet un avis périodique spécifique à chacune des trois dimensions (cf. section questionnaire), ainsi qu'un avis concernant la prestation individuelle de chaque enseignant pour l'UE évaluée.
+Pour chaque unité d'enseignement, la commission pédagogique émet un avis périodique spécifique à chacune des trois dimensions (cf. section~\ref{sec:constituer-quest}), ainsi qu'un avis concernant la prestation individuelle de chaque enseignant pour l'UE évaluée.
 Cette évaluation suit l'une de ces cinq appréciations (cf. annexe~\ref{an:regl-cadre})~:
 \begin{itemize}
 	\item Très positive
@@ -735,6 +735,19 @@ Cette évaluation suit l'une de ces cinq appréciations (cf. annexe~\ref{an:regl
 	\item Sans objet
 \end{itemize}
 Si elle le souhaite, la commission complète l'appréciation d'un commentaire, communiqué uniquement à l'enseignant concerné (confidentiel) ou visible à toute personne éligible à la consultation de l'appréciation (cf. section~\ref{sec:consul-ue-enseign}).
+
+Afin de faciliter le processus d'évaluation, un indicateur statistique est calculé sur base des résultats.
+Il résume les résultats de chaque dimension en une seule indication et donne une appréciation de la dispersion des résultats.\newline{}
+
+Lorsque l'avis est «~potentiellement défavorable~» ou «~problématique~» pour au moins l'un des dimensions, l'enseignant concerné est convoqué auprès du président de la commission pédagogique accompagné d'un membre étudiant de la commission.
+Lors de l'entrevue, le président fait aussi office de secrétaire et communique un exemplaire du procès-verbal au doyen de la faculté.
+
+En cas de deuxième avis «~potentiellement défavorable~» consécutif, le doyen est associé à la même procédure.
+
+En cas de troisième avis «~potentiellement défavorable~» consécutif, le dossier est transmis au vice-recteur en charge de l'enseignement.\newline{}
+
+Ponctuellement, le doyen de la faculté peut solliciter la consitution d'un avis de circonstance.
+Ce processus est décrit dans la section~\ref{sec:avis-circonstance}
 
 
 
@@ -746,7 +759,7 @@ Si elle le souhaite, la commission complète l'appréciation d'un commentaire, c
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %      DÉPOUILLEMENT DES RÉSULTATS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Dépouillement des résultats}
+\subsection{Dépouillement des résultats}\label{sec:depouillement-res}
 Le dépouillement des résultats constitue un traitement préliminaires des résultats de l'enquête d'évaluation des enseignements.
 Cette étape est gérée par un ou plusieurs membres de la commission pédagogique facultaire dépêchés par le président de cette même commission.
 Leur rôle est d'effectuer un travail préparatoire à la réunion de commission en distinguant les cas triviaux ne nécessitant pas de discussion.
@@ -768,69 +781,88 @@ Pour chacune d'entre elles, un indicateur d'évaluation et de dispersion permet 
 % 	\item une réunion de la commission pédagogique pour émettre une évaluation des unités d'enseignement et des enseignant n'ayant pas été évalués par la première étape.
 % \end{itemize}
 
-Les évaluations émises à l'issue du traitement des résultats sont mises à disposition des gestionnaires pédagogiques facultaires, aux enseignants ainsi qu'aux gestionnaires de campagne.
+% Les évaluations émises à l'issue du traitement des résultats sont mises à disposition des gestionnaires pédagogiques facultaires, aux enseignants ainsi qu'aux gestionnaires de campagne.
 
-En cas d'avis potentiellement défavorable, il se passe des choses spéciales (article 9).
+% En cas d'avis potentiellement défavorable, il se passe des choses spéciales (article 9).
 
-Peut être à la base de l'émission d'un avis de circonstance.
-
-
-\subsubsection{Processus}
-\paragraph{Élément déclencheur}~\newline{}
-
-Le traitement des résultats débute à la date définie dans le calendrier de campagne.
-
-\paragraph{Planification}~\newline{}
-
-Le traitement des résultats a lieu à chacune des campagnes d'évaluation.
-Ces dernières sont programmées deux fois par an (cf. section~\ref{sec:calendrier-processus-plan}).
-
-\paragraph{Data}~\newline{}
-
-\begin{tabularx}{\linewidth}{|X|X|} \hline
-Data In & Data Out \\ \hline
-\begin{itemize}
-	\item Résultats des prises d'avis
-	\item Indicateurs d'évaluation\newline{}
-\end{itemize}
- & 
-\begin{itemize}
-	\item Évaluations des enseignants et des unités d'enseignement
-	\item Notification de disponibilité des résultats\footnote{Sans doute à supprimer de cette liste. La notification ne fait partie à proprement parler du processus de traitement des résultats, mais il y fait directement suite. Ne serait-il pas intéressant de le faire apparaître dans le diagramme d'acitivité~?}\newline{}
-\end{itemize}
-\\ \hline
-\end{tabularx}
-
-\paragraph{Data In du processus}~\newline{}
-
-\begin{tabularx}{\linewidth}{|X|X|X|X|} \hline
-Data & Type & Source & Destiné à l'acteur \\ \hline
-Résultats des prises d'avis & Base de données & Prise d'avis des étudiants & Commission pédagogique \\
-Indicateurs d'évaluation & Base de données & Calculs statistiques & Commission pédagogique \\ \hline
-\end{tabularx}
-
-\paragraph{Data Out du processus}~\newline{}
-
-\begin{tabularx}{\linewidth}{|X|X|X|X|} \hline
-Data & Type & État & Destination \\ \hline
-Évaluations des enseignants et des unités d'enseignement & ??\footnote{On donne accès à un pan de l'application. À quel type cela correspond-il ?} & ?? & 
-\begin{itemize}
-	\item Enseignants
-	\item Gestionnaires de campagne
-	\item Gestionnaires pédagogiques faculaires\newline{}
-\end{itemize}
-\\
-Notification de disponibilité des résultats & Courriel & Complet & Enseignants \\ \hline
-\end{tabularx}
-
-\paragraph{Acteurs}~\newline{}
-
-\begin{tabularx}{\linewidth}{|X|X|X|X|X|} \hline
-Nom & Rôle & Actions & Data In & Data Out \\ \hline 
-Commission pédagogique & Traitement des résultats & Sur base des prises d'avis, décide d'une évaluation pour l'enseignant et l'unité d'enseignement concernés & Prises d'avis & Évaluations \\ \hline
-\end{tabularx}
+% Peut être à la base de l'émission d'un avis de circonstance.
 
 
+% \subsubsection{Processus}
+% \paragraph{Élément déclencheur}~\newline{}
+
+% Le traitement des résultats débute à la date définie dans le calendrier de campagne.
+
+% \paragraph{Planification}~\newline{}
+
+% Le traitement des résultats a lieu à chacune des campagnes d'évaluation.
+% Ces dernières sont programmées deux fois par an (cf. section~\ref{sec:calendrier-processus-plan}).
+
+% \paragraph{Data}~\newline{}
+
+% \begin{tabularx}{\linewidth}{|X|X|} \hline
+% Data In & Data Out \\ \hline
+% \begin{itemize}
+% 	\item Résultats des prises d'avis
+% 	\item Indicateurs d'évaluation\newline{}
+% \end{itemize}
+%  & 
+% \begin{itemize}
+% 	\item Évaluations des enseignants et des unités d'enseignement
+% 	\item Notification de disponibilité des résultats\footnote{Sans doute à supprimer de cette liste. La notification ne fait partie à proprement parler du processus de traitement des résultats, mais il y fait directement suite. Ne serait-il pas intéressant de le faire apparaître dans le diagramme d'acitivité~?}\newline{}
+% \end{itemize}
+% \\ \hline
+% \end{tabularx}
+
+% \paragraph{Data In du processus}~\newline{}
+
+% \begin{tabularx}{\linewidth}{|X|X|X|X|} \hline
+% Data & Type & Source & Destiné à l'acteur \\ \hline
+% Résultats des prises d'avis & Base de données & Prise d'avis des étudiants & Commission pédagogique \\
+% Indicateurs d'évaluation & Base de données & Calculs statistiques & Commission pédagogique \\ \hline
+% \end{tabularx}
+
+% \paragraph{Data Out du processus}~\newline{}
+
+% \begin{tabularx}{\linewidth}{|X|X|X|X|} \hline
+% Data & Type & État & Destination \\ \hline
+% Évaluations des enseignants et des unités d'enseignement & ??\footnote{On donne accès à un pan de l'application. À quel type cela correspond-il ?} & ?? & 
+% \begin{itemize}
+% 	\item Enseignants
+% 	\item Gestionnaires de campagne
+% 	\item Gestionnaires pédagogiques faculaires\newline{}
+% \end{itemize}
+% \\
+% Notification de disponibilité des résultats & Courriel & Complet & Enseignants \\ \hline
+% \end{tabularx}
+
+% \paragraph{Acteurs}~\newline{}
+
+% \begin{tabularx}{\linewidth}{|X|X|X|X|X|} \hline
+% Nom & Rôle & Actions & Data In & Data Out \\ \hline 
+% Commission pédagogique & Traitement des résultats & Sur base des prises d'avis, décide d'une évaluation pour l'enseignant et l'unité d'enseignement concernés & Prises d'avis & Évaluations \\ \hline
+% \end{tabularx}
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%      DÉLIBÉRATION DES ÉVALUATION
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Délibération des évaluation}\label{sec:deliberation-eval}
+Assemblée plénière délibérant des évaluation des UE et des enseignants.
+Se base sur le même matériel que le dépouillement et le travail préliminaire, mais nécessite la commission pédagogique au complet.
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%      CONSTITUTION AVIS DE CIRCONSTANCE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Constitution d'un avis de circonstance}\label{sec:avis-circonstance}
+cf. règlement cadre article 10.
 
 
 
