--- a/lexique.tex
+++ b/lexique.tex
@@ -127,3 +127,7 @@
 	{Registre de l'activité des utilisateurs dans l'application. (notifications envoyées, etc.)}
 
 % \longnewglossaryentry{}{NRE}
+
+\longnewglossaryentry{vice-recteur-enseignement}
+	{name=Vice-recteur en charge de l'enseignement}
+	{}
